# content-aggregator

./: .clinerules  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN-SYSTEM.md  FIX-SETTINGS-SAVE-BUG-2026-06-07.md  README.md  SKILL.md  SPEC.md  _list_articles.py  add_cache_btn.py  add_cache_button.py  add_clear_cache_button.py  apikey_update_20260610.md  check_authfetch.js  check_funcs.py  check_js_syntax.js  check_llm.py  check_user_db.py  config.example.yaml  diagnose_youtube_collect.py  docker-compose.yml  dump_lines.py  encrypt_api_key.py  find_js_error.js  fix-2026-06-08-youtube-limit-toast.md  fix_auth_import.ps1  fix_extra_brace.js  fix_js_syntax.js  fix_showtoast.js  init_db.py  llm_api_key_fix_20260610.md  pyproject.toml  read_llm.py  requirements.txt  show_exact.py  show_llm.py  start-server.ps1  (+17 more)
.plan/: progress.md  task_plan.md
01-docs/: AGENTS.md  COLLABORATION.md  COMPLETE-FILE-LIST-v2.md  HEARTBEAT.md  MANUAL.md  MEMORY.md  MIGRATION-CHECKLIST.md  MIGRATION-GUIDE.md  MIGRATION-REPORT.md  PROJECT-INDEX.md  PROJECT-REGISTRY.md  README.md  SKILL-LIST.md  SOUL.md  TOOLS.md
02-source/: PROJECT-001-产品设计思路-2026-06-15.md
03-memory/: README.md  memory-export-full.json  memory-export-recent.json
_archive_v1/: README.md
backend/: AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260630_0550_2f5952d46af4_create_base_tables.py  20260630_0555_3fc139e8_create_monitor_tables.py  20260630_0900_000_init.py
backend/app/: AGENTS.md  __init__.py  celery_app.py  config.py  database.py  main.py  tasks.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  articles.py  auth.py  collector.py  cover.py  monitor_articles.py  monitors.py  proxy.py  publisher.py  rewriter.py  router.py  tasks.py  trending.py
backend/app/api/v2/: __init__.py
backend/app/core/: __init__.py  exceptions.py  security.py
backend/app/models/: __init__.py  article.py  monitor_article.py  monitor_source.py  publish_log.py  task.py  user.py
backend/app/schemas/: __init__.py  article.py  monitor.py  publish.py  user.py
backend/app/services/: __init__.py  auth_service.py  collect.py  collect_bridge.py  collector.py  proxy_service.py  publisher.py  rewrite.py  rewriter.py  task_service.py
backend/tests/: conftest.py  test_last30days_collector.py  test_monitor_articles.py  test_monitors.py
backend/tests/test_api/: __init__.py  test_article.py  test_auth.py  test_auth_password.py  test_collect.py  test_collect_bridge.py  test_monitor_articles.py  test_proxy.py  test_publisher.py  test_rewriter.py  test_task_cancel.py
config/: .env.example  config.example.yaml  config.yaml  config.yaml.example  loader.py
(+296 files in other folders)
