[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "content-aggregator"
version = "0.1.0"
description = "内容聚合与改写平台 - 互联网热文转化为标准化内容资产"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Colinchiu007"}
]
keywords = ["content", "aggregator", "rss", "rewrite", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "feedparser>=6.0.10",
    "peewee>=3.17.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "markdown>=3.5.0",
    "mistune>=3.0.0",
    "pillow>=10.0.0",
    "loguru>=0.7.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/Colinchiu007/content-aggregator"
Repository = "https://github.com/Colinchiu007/content-aggregator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]